<resources>
    <string name="app_name">KTP</string>
    <string name="text_extraction_from">KTP Text Extraction</string>
    <string name="ktp_extract">ktp extract</string>
    <string name="todo">TODO</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="name">Nama</string>
    <string name="nik">NIK</string>
    <string name="nomor_nik">Nomor NIK</string>
    <string name="tempat_tgl_lahir">TTL</string>
    <string name="tempat_tanggal_lahir">Tempat/Tanggal Lahir</string>
    <string name="alamat">ALAMAT</string>
    <string name="alamat_ktp">Alamat KTP</string>
    <string name="extract_text">Extract Text</string>
    <string name="extracted_info">Extracted info from KTP image will be shown below</string>\
    <string name="name_on_card_string">Name on card</string>
    <string name="name_on_card_ek1_string">Name on card</string>
    <string name="name_on_card_ek2_string">Name on card</string>
    <string name="k_string">Name on card</string>
    <string name="extract_string">use this card</string>
    <string name="extract_ek1_string">use this card</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="ktp_extraction_string">Credit / Debit card</string>
    <string name="sweets_string">Sweets</string>
    <string name="sweets_ek1_string">Sweets</string>
    <string name="sweets_ek2_string">Sweets</string>
    <string name="sweets_ek3_string">Sweets</string>
    <string name="sweets_ek4_string">Sweets</string>
    <string name="sweets_ek5_string">Sweets</string>
    <string name="home">Home</string>
    <string name="ktp1">ktp1</string>
    <string name="ktp2">ktp2</string>
    <string name="ox_collective">KTP Extract</string>
    <string name="description">Aplikasi ini akan mempermudah mengisi form data KTP dengan capture foto KTP dengan kamera hp. \n\n\n\n</string>
    <string name="contact_us">Lanjutkan</string>

</resources>