<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".ktpCardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="234.24dp"
                        android:layout_height="163.86dp"
                        android:layout_marginStart="90dp"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:contentDescription="vector"
                        android:focusable="true"
                        android:onClick="takePicture"
                        android:src="@drawable/vector" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_weight="0.3"
                        android:visibility="gone"
                        android:id="@+id/reset"
                        android:onClick="reset"
                        android:background="@color/black"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/info_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/label_nik"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/nik"
                                android:textAllCaps="true"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold"/>

                            <EditText
                                android:id="@+id/nik_edit_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:hint="@string/nomor_nik"
                                android:minHeight="48dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:ignore="TextFields" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/label_name"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/name"
                                android:textAllCaps="true"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold"/>

                            <EditText
                                android:id="@+id/name_edit_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:hint="@string/full_name"
                                android:minHeight="48dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:ignore="TextFields" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/label_ttl"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/tempat_tgl_lahir"
                                android:textAllCaps="true"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold"/>

                            <EditText
                                android:id="@+id/ttl_edit_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:hint="@string/tempat_tanggal_lahir"
                                android:minHeight="48dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:ignore="TextFields" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/label_alamat"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/alamat"
                                android:textAllCaps="true"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="bold"/>

                            <EditText
                                android:id="@+id/alamat_edit_text"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:autofillHints=""
                                android:hint="@string/alamat_ktp"
                                android:minHeight="48dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                tools:ignore="TextFields" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>
        <RelativeLayout android:id="@+id/signature"
            android:layout_marginTop="500dp"
            android:layout_marginStart="132dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView android:id="@+id/ttd"
                android:src="@drawable/vector_ek2"
                android:contentDescription="vector_ek2"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="150dp"
                android:layout_height="150dp" />

        </RelativeLayout>
        <!-- Two Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_below="@+id/scrollView"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="12dp">

            <Button
                android:id="@+id/viewData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="leftButtonAction"
                android:text="Database"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ocr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="extractInfo"
                android:text="Extract"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="save"
                android:text="Save"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>