<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_extraction_from"
        android:textColor="@color/black"
        android:id="@+id/title_text"
        android:padding="16dp"
        android:textSize="17sp"
        android:fontFamily="monospace"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_text">

        <RelativeLayout
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/ktpCardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="15dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="openRelevantActivity"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:background="@color/colorPrimaryDark"
                        android:contentDescription="@string/todo"
                        android:padding="16dp"
                        android:src="@drawable/id_card"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="24dp"
                        android:layout_weight="0.7"
                        android:fontFamily="monospace"
                        android:includeFontPadding="false"
                        android:letterSpacing="0.2"
                        android:text="@string/ktp_extract"
                        android:textAllCaps="true"
                        android:textColor="@color/ktp_extraction_color"
                        android:textSize="24sp"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ktpkuCardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="15dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="openRelevantActivity"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@id/ktpCardView"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:background="@color/colorPrimaryDark"
                        android:contentDescription="@string/todo"
                        android:padding="16dp"
                        android:src="@drawable/id_card"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="24dp"
                        android:layout_weight="0.7"
                        android:fontFamily="monospace"
                        android:includeFontPadding="false"
                        android:letterSpacing="0.2"
                        android:text="@string/ktp_extract"
                        android:textAllCaps="true"
                        android:textColor="@color/ktp_extraction_color"
                        android:textSize="24sp"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/navbg"
        app:itemIconSize="30dp"
        app:menu="@menu/menu_item"/>

</RelativeLayout>